--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -25,3 +28,39 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+ul {
+  gap: 16px;
+  list-style-type: none;
+  padding: 0;
+  margin: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: dimgray;
+}
+
+.content {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header,
+.footer,
+ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer{
+  background-color: #eeeeee;
+}
+
+button {
+  padding: 12px;
+}
+
+
