--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -4,6 +4,9 @@ body, html {
 }
 
 .container {
+  display: grid;
+  grid-template:  1fr 1fr 5fr 1fr / 1fr 3fr;
+  gap: 15px;
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -20,13 +23,13 @@ body, html {
 }
 
 .header {
-  background-color: #FFDE22;
   grid-column: 1 / 3;
+  background-color: #FFDE22;
 }
 
 .sidebar {
-  background-color: #FF7755;
   grid-row: 2 / 4;
+  background-color: #FF7755;
 }
 
 .nav {
@@ -45,6 +48,6 @@ body, html {
 }
 
 .footer {
-  background-color: #393f4d;
   grid-column: 1 / 3;
+  background-color: #393f4d;
 }
