--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -4,6 +4,14 @@
 }
 
 .container {
+  display: grid;
+  grid-template: 100px 50px 1fr 50px / 1fr 4fr;
+  grid-template-areas:
+    "header header"
+    "sidebar navbar"
+    "sidebar cards"
+    "footer footer";
+  gap: 4px;
   text-align: center;
 }
 
@@ -16,15 +24,33 @@
 }
 
 .header {
+  grid-area: header;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
   background-color: #393f4d;
+  align-items: center;
+}
+
+.logo {
+  justify-self: start;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
 }
 
 .sidebar {
+  grid-area: sidebar;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 50px;
   background-color: #FF7755;
 }
 
@@ -44,16 +70,30 @@
   font-weight: normal;
 }
 
+.side-content, .photo {
+  display: grid; 
+  align-items: center;
+}
+
 .nav {
   background-color: #FF7755;
 }
 
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .nav ul li {
+  list-style-type: none;
   font-size: 16px;
   text-transform: uppercase;
 }
 
 .article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
   background-color: #bccbde;
 }
 
@@ -68,6 +108,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -82,6 +123,7 @@
 }
 
 .footer {
+  grid-area: footer;
   background-color: #393f4d;
 }
 
